# SoulOfNG

./: .gitmodules  CMakeLists.txt  README.md  TODO
.github/workflows/: build.yml
include/: AssetsManager.hpp  Camera.hpp  CollisionHandler.hpp  CrashHandler.hpp  Editor.hpp  Entity.hpp  Game.hpp  Inventory.hpp  Logger.hpp  Player.hpp  QuadTree.hpp  Ray.hpp  Room.hpp  Scene.hpp  Signal.hpp  Timer.hpp  Utilities.hpp  Wall.hpp
include/Animations/: FrameAnimation.hpp
include/BSP/: BSPGenerator.hpp  BSPNode.hpp
include/Entities/: Entity.hpp  Player.hpp  Wall.hpp
include/Layers/: Layer.hpp  LobbyLayer.hpp  MainGameLayer.hpp  MainMenuLayer.hpp  MultiplayerMenuLayer.hpp  SettingsGameLayer.hpp
include/Network/: Client.hpp  Lobby.hpp  SteamBackend.hpp  SteamClientNetwork.hpp
include/Physics/: CollisionSystem.hpp  Raycasting.hpp
include/UI/: UIButton.hpp  UICheckBox.hpp  UIDialogWidget.hpp  UIInputText.hpp  UILayout.hpp  UIMessage.hpp  UITableWidget.hpp  UIText.hpp  UIWidget.hpp
include/Widgets/: AuthorizationDialogWidget.hpp  CreateLobbyDialogWidget.hpp  EscapeUI.hpp  LobbyWidget.hpp  MultiplayerMenuConnectionDialogWidget.hpp  RotatingImage.hpp  SteamFriendsDialogWidget.hpp
network/Packet/: CMakeLists.txt
network/Packet/include/: NetworkPackets.hpp  Packet.hpp  PacketParser.hpp  Serialization.hpp  Types.hpp
network/Packet/src/: PacketParser.cpp  Serialization.cpp
network/Server/: CMakeLists.txt
network/Server/include/: Server.hpp
network/Server/include/Server/: ClientConnection.hpp  Lobby.hpp  Server.hpp
network/Server/src/: ClientConnection.cpp  Lobby.cpp  Server.cpp  main.cpp
resources/config/: client_config.json
resources/maps/: default_map.json
src/: AssetsManager.cpp  Camera.cpp  CollisionHandler.cpp  CrashHandler.cpp  Editor.cpp  Game.cpp  Inventory.cpp  Logger.cpp  Player.cpp  QuadTree.cpp  Room.cpp  Scene.cpp  Timer.cpp  Wall.cpp  main.cpp
src/Animations/: FrameAnimation.cpp
src/BSP/: BSPGenerator.cpp  BSPNode.cpp
src/Entities/: Player.cpp  Wall.cpp
src/Layers/: LobbyLayer.cpp  MainGameLayer.cpp  MainMenuLayer.cpp  MultiplayerMenuLayer.cpp  SettingsGameLayer.cpp
src/Network/: Client.cpp  SteamBackend.cpp  SteamClientNetwork.cpp
src/Physics/: Raycasting.cpp
src/UI/: UIButton.cpp  UICheckBox.cpp  UIDialogWidget.cpp  UIInputText.cpp  UIMessage.cpp  UITableWidget.cpp  UIText.cpp  UIWidget.cpp
src/Widgets/: AuthorizationDialogWidget.cpp  CreateLobbyDialogWidget.cpp  EscapeUI.cpp  Inventory.cpp  LobbyWidget.cpp  MultiplayerMenuConnectionDialogWidget.cpp  RotatingImage.cpp  SteamFriendsDialogWidget.cpp
